# Dev_CMake2

./: CMakeLists.txt  CMakeSettings.json  CMakeSettings_beagle.json  CMakeSettings_dart.json  CMakeSettings_linux.json  CMakeSettings_win.json  MyConfig_dart.cmake  MyConfig_win.cmake  MyGlobalImports.cmake  MyLocalImports.cmake  MyPostBuild.cmake  MyPrecompiledHeader.cmake  MySpecial.cmake  README.md
MyLibrary/: CMakeLists.txt
MyLibrary2/: CMakeLists.txt  MyFunction2.cpp  MyFunction2.h
MyProgram1/: CMakeLists.txt
MyProgram2/: CMakeLists.txt  main.cpp
MyProgram3/: CMakeLists.txt  main.cpp
MyProject/: CMakeLists.txt  main.cpp
MyProject2/: CMakeLists.txt  MyClass2.cpp  MyClass2.h  main.cpp
MyStaticLib/: CMakeLists.txt  stdafx.h
